syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.sparetime";
option java_outer_classname = "HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloRequest1 {
  repeated string name = 1;
}

message HelloResponse {
  string result = 1;
}

service HelloService {

  rpc hello(HelloRequest) returns(HelloResponse) {}

  rpc hello1(HelloRequest1) returns(HelloResponse) {}

  rpc serverStream(HelloRequest) returns(stream HelloResponse) {}

  rpc clientStream(stream HelloRequest) returns(HelloResponse) {}

  rpc biDirectionStream(stream HelloRequest) returns(stream HelloResponse) {}
}